--- a/css/inline.css
+++ b/css/inline.css
@@ -3,24 +3,24 @@ html {font-size: 1em;}
 
 body {
 	margin: 0;
-  background-color: white;
+  background-color: #FAFAFA;
   font-family: 'Open Sans', sans-serif;;
   font-weight: 400;
-  line-height: 1.45;
+  line-height: 1.45em;
   color: #333;
 }
 
 p {margin-bottom: 1.3em;}
 
 h1, h2, h3, h4 {
-  margin: 1.414em 0 0.5em;
+  margin: 1.45em 0 0.5em;
   font-weight: inherit;
   line-height: 1.2;
 }
 
 h1 {
   margin-top: 0;
-  font-size: 5.063em;
+  font-size: 4.8em;
 }
 
 h2 {font-size: 3.375em;}
@@ -33,16 +33,40 @@ small, .font_small {font-size: 0.667em;}
 
 
 .container{
-	padding: 10px;
-	border: solid 1px blue;
+	padding: 10px 25px;
+  max-width: 1170px;
+  margin: 0 auto;
+  background-color: #fff;
+  box-shadow: 0 3px 6px rgba(177, 177, 177, 0.2), 0 14px 40px rgba(152, 152, 152, 0.2);
+	/*border: solid 1px lightblue;*/
 }
 
-#header{
-	border: solid 1px red;
-}
-#header h1{
 
+.title{
+  text-align: center;
+  margin: 10px 0 30px 0;
+  text-transform: uppercase;
 }
+
+.section{
+  padding: 10px 0;
+  border-bottom: solid 3px lightblue;
+}
+.tags{
+  background-color: lightblue;
+  margin: 0;
+  padding: 10px 15px;
+  color: #1565C0;
+}
+.define dt{
+  font-size: 20px;
+  font-weight: 700;
+}
+.fa-html5{
+  font-size: 40px;
+  color: #1565C0;
+}
+
 
 
 
