--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,43 @@
+
+html {font-size: 1em;}
+
+body {
+  background-color: white;
+  font-family: 'Lato', sans-serif;;
+  font-weight: 400;
+  line-height: 1.45;
+  color: #333;
+}
+
+p {margin-bottom: 1.3em;}
+
+h1, h2, h3, h4, h5{
+  margin: 1.414em 0 0.5em;
+  font-family: Merriweather;
+  font-weight: inherit;
+  line-height: 1.4;
+}
+
+h1 {
+  margin-top: 0;
+  font-size: 5.063em;
+}
+
+h2 {font-size: 3.375em;}
+
+h3 {font-size: 2.25em;}
+
+h4 {font-size: 1.5em;}
+
+small, .font_small {font-size: 0.667em;}
+
+
+header{
+	text-align: center;
+	color: #fff;
+}
 .bg-img{
-	background-image: url(../images/business-charts-commerce-265087.jpg);
+	background-image: url(../images/laptop-desk-banner.png);
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
@@ -29,5 +67,19 @@
 	clear: both;
 }
 
+.title{
+	font-family: 'Merriweather', serif;
+	font-weight: 700;
+}
 
+.site-nav ul li a{
+	color: #fff;
+	text-decoration: none;
+}
+
+#section{
+	margin: 40px 10px;
+	padding: 20px 10px;
+	border: solid 4px blue;
+}
 
